deploy/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xnet-mlops-web-deployment
  namespace: xnet-mlops
  labels:
    app: xnet-mlops-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: xnet-mlops-web
  template:
    metadata:
      labels:
        app: xnet-mlops-web
    spec:
      imagePullSecrets:
        - name: harbor
      containers:
        - name: xnet-mlops-web
          image: 127.0.0.1/library/xnet-mlops-web:${BUILD_NUMBER}
          ports:
            - name: tcp-80
              containerPort: 80
              protocol: TCP
          resources:
            limits:
              cpu: "2"
              memory: "2Gi"
            requests:
              cpu: "500m"
              memory: "512Mi"
          volumeMounts:
            - name: kube-api-access
              mountPath: /var/run/secrets/kubernetes.io/serviceaccount
              readOnly: true
      volumes:
        - name: kube-api-access
          projected:
            sources:
              - serviceAccountToken:
                  expirationSeconds: 3607
                  path: token
              - configMap:
                  name: kube-root-ca.crt
                  items:
                    - key: ca.crt
                      path: ca.crt
              - downwardAPI:
                  items:
                    - path: namespace
                      fieldRef:
                        apiVersion: v1
                        fieldPath: metadata.namespace
            defaultMode: 420
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      serviceAccountName: default
      tolerations:
        - key: node.kubernetes.io/not-ready
          operator: Exists
          effect: NoExecute
          tolerationSeconds: 300
        - key: node.kubernetes.io/unreachable
          operator: Exists
          effect: NoExecute
          tolerationSeconds: 300
---
apiVersion: v1
kind: Service
metadata:
  name: xnet-mlops-web-service
  namespace: xnet-mlops
  labels:
    app: xnet-mlops-web
spec:
  selector:
    app: xnet-mlops-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30888
      name: tcp-80
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: xnet-mlops-web-ingress
  namespace: xnet-mlops
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: xnet-mlops-web-service
                port:
                  number: 80
